--- a/src/components/SearchInput/searchInput.scss
+++ b/src/components/SearchInput/searchInput.scss
@@ -2,7 +2,7 @@ $button-color-one: rgb(153, 51, 255) 0%;
 $button-color-two: rgb(255, 102, 102) 100%;
 $icon-color: rgb(44, 83, 255);
 
-.container {
+.input_container {
   padding: 0;
 
   input {
