--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,19 @@
 .app {
-  background-color: #000;
-  min-height: 100vh;
   width: 100%;
 
-  .container {
-    width: 1040px;
+  .body {
+    width: 80%;
+    margin: auto;
+    margin-bottom: 200px;
+
+    h2 {
+      color: #fff;
+    }
 
     img {
       width: 80px;
       height: 80px;
+      cursor: pointer;
     }
 
     nav {
@@ -21,6 +26,27 @@
         margin: 0;
         align-self: flex-end;
       }
+    }
+  }
+
+  .gifs__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .row {
+    width: 100%;
+  }
+
+  .gif__column {
+    min-width: 240px;
+    height: 160px;
+    margin: 15px 0;
+
+    img {
+      min-width: 100%;
+      min-height: 100%;
     }
   }
 }
